# pidgin_plugin

./: Makefile.am  autogen.sh  configure.ac  readme.txt
include/: libcaptcha.c  libcaptcha.h
src/: hka-plugin.c
